--- a/www/index.html
+++ b/www/index.html
@@ -2,28 +2,29 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, width=device-width, height=device-height">
         <title>RehApp</title>
 
-        <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="lib/ionic/css/ionic.css" type="text/css" rel="stylesheet">
+        <link href="css/style.css" type="text/css" rel="stylesheet">
 
         <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
         <link href="css/ionic.app.css" rel="stylesheet">
         -->
 
         <!-- ionic/angularjs js -->
-        <script src="lib/ionic/js/ionic.bundle.js"></script>
-
+        <script type="text/javascript" src="lib/ionic/js/ionic.bundle.min.js"></script>
+        <script type="text/javascript" src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+        
         <!-- cordova script (this will be a 404 during development) -->
-        <script src="cordova.js"></script>
+        <script type="text/javascript" src="cordova.js"></script>
 
         <!-- your app's js -->
-        <script src="js/app.js"></script>
-        <script src="js/controllers.js"></script>
-        <script src="js/services.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/controllers.js"></script>
+        <script type="text/javascript" src="js/services.js"></script>
     </head>
-    <body ng-app="rehApp">
+    <body data-ng-app="rehApp">
         <!--
           The nav bar that will be updated as we navigate between views.
         -->
