--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,8 @@
         <!-- ionic/angularjs js -->
         <script type="text/javascript" src="lib/ionic/js/ionic.bundle.min.js"></script>
         <script type="text/javascript" src="lib/ngCordova/dist/ng-cordova.min.js"></script>
-        
+        <script type="text/javascript" src="lib/angular-mocks/angular-mocks.js"></script>
+
         <!-- cordova script (this will be a 404 during development) -->
         <script type="text/javascript" src="cordova.js"></script>
 
@@ -23,8 +24,9 @@
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/controllers.js"></script>
         <script type="text/javascript" src="js/services.js"></script>
+        <script type="text/javascript" src="js/constants.js"></script>
     </head>
-    <body data-ng-app="rehApp">
+    <body data-ng-app="rehApp" data-ng-controller="AppController">
         <!--
           The nav bar that will be updated as we navigate between views.
         -->
