--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
         <script type="text/javascript" src="js/controllers.js"></script>
         <script type="text/javascript" src="js/services.js"></script>
         <script type="text/javascript" src="js/constants.js"></script>
+        <script type="text/javascript" src="js/DataStorageService.js"></script>
     </head>
     <body data-ng-app="rehApp" data-ng-controller="AppController">
         <!--
